feat: Complete code interacting with MongoDB

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -5,12 +5,17 @@
 
 <div class="box">
   <ul>
-    <% for(let item of items){ %>
-    <div class="item">
-      <input type="checkbox" />
-      <p><%= item %></p>
-    </div>
-    <% } %>
+    <% items.forEach(function(item) { %>
+      <form action="/delete" method="post">
+        <div class="item">
+          <input name="checkbox" value="<%= item._id %>" type="checkbox" onchange="this.form.submit()"/>
+          <p><%= item.name %></p>
+        </div>
+        <input type="hidden" name="listName" value="<%= listTitle %>">
+      </form>
+
+    <% }); %>
+
   </ul>
 
   <form class="item" action="/" method="post">
@@ -20,7 +25,7 @@
       placeholder="New Item"
       autocomplete="off"
     />
-    <button type="submit" name="list" value="<%=listTitle%>">+</button>
+    <button type="submit" name="listTitle" value="<%=listTitle%>">+</button>
   </form>
 </div>
 
